tests/baselines/reference/commentsExternalModules2.errors.txt
commentsExternalModules2_0.ts(2,15): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
commentsExternalModules2_0.ts(10,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
commentsExternalModules2_0.ts(26,15): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
commentsExternalModules2_0.ts(36,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== commentsExternalModules_1.ts (0 errors) ====
    /**This is on import declaration*/
    import extMod = require("commentsExternalModules2_0"); // trailing comment 1
    extMod.m1.fooExport();
    export var newVar = new extMod.m1.m2.c();
    extMod.m4.fooExport();
    export var newVar2 = new extMod.m4.m2.c();
    
==== commentsExternalModules2_0.ts (4 errors) ====
    /** Module comment*/
    export module m1 {
                  ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        /** b's comment*/
        export var b: number;
        /** foo's comment*/
        function foo() {
            return b;
        }
        /** m2 comments*/
        export module m2 {
                      ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            /** class comment;*/
            export class c {
            };
            /** i*/
            export var i = new c();
        }
        /** exported function*/
        export function fooExport() {
            return foo();
        }
    }
    m1.fooExport();
    var myvar = new m1.m2.c();
    
    /** Module comment */
    export module m4 {
                  ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        /** b's comment */
        export var b: number;
        /** foo's comment
        */
        function foo() {
            return b;
        }
        /** m2 comments
        */
        export module m2 {
                      ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            /** class comment; */
            export class c {
            };
            /** i */
            export var i = new c();
        }
        /** exported function */
        export function fooExport() {
            return foo();
        }
    }
    m4.fooExport();
    var myvar2 = new m4.m2.c();
    